Device Token to Firestore COMPLETE!

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FAMILYSHIP</string>
+    <string name="msg_token_fmt" translatable="false">%s</string>
 </resources>
