--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">FAMILYSHIP</string>
     <string name="msg_token_fmt" translatable="false">%s</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="default_notification_channel_name" translatable="false">default_notification_channel_name</string>
     <string name="fcm_message">FCM Message</string>
+    <string name="msg_subscribed">msg_subscribed</string>
+    <string name="msg_subscribe_failed">msg_subscribe_failed</string>
 </resources>
