--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="add_widget">Add widget</string>
     <string name="title_activity_maps">Map</string>
 
+    <string name="action_settings">Settings</string>
 
     <string name="example_1_title">Example 1</string>
     <string name="example_1_subtitle">Multiple selection, horizontal scrolling, shows in and out dates, shows \"endOfRow\" implementation of \"outDateStyle\" option.</string>
